--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,12 @@ body {
 button, .form-input {
   width: 10rem;
 }
+
+@media screen and (max-width: 600px) {
+  #fiveday-container { 
+    flex-direction: column;
+  }
+  #city-search-form {
+    text-align: center;
+  }
+}
